tests/NormalTests/paczka1/fuzzy1/48759829.err
Error in line 9: S950 S732 94,92
Error in line 13: a1PhF S732 3,3
Error in line 15: a1PhF S950 71,6
Error in line 17: a1PhF S732 85,2
Error in line 14: S950 S732 74,4
Error in line 24: a1PhF S950 28,0
